[project]
name = "whatsapp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "google-auth>=2.55.1",
    "gspread>=6.2.1",
    "hubspot-api-client>=12.0.0",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.3",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pybase64>=1.4.3",
    "pymongo>=4.17.0",
    "pywa[server]>=4.2.1",
    "pywhatkit>=5.4",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.49.0",
]
